deg show update

--- a/about.html
+++ b/about.html
@@ -28,6 +28,7 @@
 	<link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.8.0/build/cssreset/cssreset-min.css">
 	<link rel="stylesheet" type="text/css" href="css/typegrid.css">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	</style>
 	<link href="includes/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
 
 
@@ -90,28 +91,30 @@
 
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
-							<img src="images/about_services01.png" alt="">
+							<img src="images/about_services04.png" alt="">
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
-							2017 - <a href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
-							2017 - <a href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), Google Campus London <br>
-							2017 - <a href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
-							2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>
+							2017 - «Art and sustainability vol. 8: digital/real – how art surfs between worlds», Mobiliar Headquarters, Bern, Switzerland <br>
+							2017 - <a id=show href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
+							2017 - Machine Made: Art, Robotics &amp; A.I., QUAD, Derby <br>
+							2017 - <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
+							2017 - <a id=show href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
+							2017 - <a id=show href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
+							<!--2016 - 'Slade Print Fair', Slade School of Fine Art, London <br>-->
 							2016 - ‘The Neural Aesthetic’, Acud Macht Neu, Berlin <br>
 							2016 -  'Skullpture', Grant Museum, University College, London <br>
 							2015 - 'You have got my bone', Foyles Bookshop, London <br>
 							2015 - ‘!!THIS TIM3 ITS R3AL!!’, Elastic Arts, Chicago <br>
 							2014 -  'Ben's Show', abandoned warehouse, Camden, London <br>
-							2014 - 'Public Show', Slade School of Fine Art Research Center, London <br>
+							<!--2014 - 'Public Show', Slade School of Fine Art Research Center, London <br>-->
 						</p>
 
 									</div><!-- // .desktop-6 -->
 						<div class="clear"></div>
 					</div><!-- // .item -->
-
 
 
 
@@ -164,7 +167,7 @@
 
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
-							<img src="images/about_services04.png" alt="">
+							<img src="images/about_services01.png" alt="">
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
