--- a/index.html
+++ b/index.html
@@ -146,6 +146,20 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<a href="project-closedLoop.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-closedLoop.jpg" alt="" />
+
+						<h3>Closed Loop.</h3>
+						<span class="category">Two Live Neural Networks - 2017</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+
+
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-digitalWhisper.html" class="permalink">
@@ -158,10 +172,6 @@
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
-
-			<div class="clear hide-under-tablet"></div>
-
-
 
 
 			<a href="project-AutoEncodedBuddha.html" class="permalink">
@@ -188,6 +198,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-digitalTouch.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -200,7 +212,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 			<a href="project-circuit.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -226,6 +237,8 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
+
 
 			<a href="project-musicalTaxonomy.html" class="permalink">
 				<div class="desktop-4 tablet-6 columns">
@@ -238,7 +251,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-lineForWalk.html" class="permalink">
@@ -266,6 +278,7 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
+				<div class="clear hide-under-tablet"></div>
 
 
 				<a href="project-breakingOut.html" class="permalink">
@@ -284,7 +297,6 @@
 
 
 
-				<div class="clear hide-under-tablet"></div>
 
 		</div><!-- // .container -->
 	</section><!-- // section#works -->
