--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -119,6 +119,14 @@
 			<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 			<!-- <div class="desktop-6 tablet-12 columns" style="text-transform: uppercase;"> -->
+			<script>
+				function resizeDivs() {
+					$('#vid').css("height", $('#vid').width()/1.7777);
+
+				}
+				$(resizeDivs);
+				$(window).resize(resizeDivs);
+			</script>
 
 					<video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-latentSpace/latentSpace.mp4" type="video/mp4">
@@ -126,10 +134,19 @@
 					</video>
 					<br>
 					<br>
+
+					<img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" />
+					<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
+					<br>
 					<br>
 
-					<img src="images/project-latentSpace/latent.jpg" alt="Jake Elwes digital artist" />
+					<img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" />
 					<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
+
 					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
 						<source src="images/project-platonicForms/computers.mp4" type="video/mp4">
