closed loop mat

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
 						<img src="images/project-closedLoop.jpg" alt="" />
 
 						<h3>Closed Loop.</h3>
-						<span class="category">Two Live Neural Networks - 2017</span>
+						<span class="category">Neural Networks - 2017</span>
 					</div><!-- // .item -->
 				</div><!-- // .desktop-4 -->
 			</a>
