--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -81,7 +81,7 @@
 
 						<div class="box-info">
 							<h3 class="border-top">Closed Loop.</h3>
-							<p class="project-desc">Two Live Neural Networks - 2017
+							<p class="project-desc">Neural Networks - 2017
 </p>
 
 							<p>Two artificial intelligence models have an active conversation reacting to each other in a constant feedback loop - one communicating with images, the other with words.
