--- a/index.html
+++ b/index.html
@@ -185,6 +185,18 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<a href="project-MLPorn.html" class="permalink">
+				<div class="desktop-4 tablet-6 columns">
+					<div class="item">
+						<img src="images/project-MLPorn.jpg" alt="" />
+
+						<h3>Machine Learning Porn</h3>
+						<span class="category">Video &amp; Neural Network - 2016</span>
+					</div><!-- // .item -->
+				</div><!-- // .desktop-4 -->
+			</a>
+
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-haikuNews.html" class="permalink">
@@ -198,7 +210,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-digitalTouch.html" class="permalink">
@@ -224,6 +235,7 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
+			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-musicalTaxonomy2.html" class="permalink">
@@ -237,7 +249,6 @@
 				</div><!-- // .desktop-4 -->
 			</a>
 
-			<div class="clear hide-under-tablet"></div>
 
 
 			<a href="project-musicalTaxonomy.html" class="permalink">
@@ -265,6 +276,7 @@
 			</a>
 
 
+			<div class="clear hide-under-tablet"></div>
 
 
 				<a href="project-digitalBlood.html" class="permalink">
@@ -278,7 +290,6 @@
 					</div><!-- // .desktop-4 -->
 				</a>
 
-				<div class="clear hide-under-tablet"></div>
 
 
 				<a href="project-breakingOut.html" class="permalink">
