--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -114,12 +114,12 @@
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid2" src="https://player.vimeo.com/video/196523344?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0" width="60%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<br></br>
 
 				<script>
 					function resizeDivs() {
-						$('#vid2').css("height", $('#vid2').width()/1.6);
+						$('#vid2').css("height", $('#vid2').width());
 
 					}
 					$(resizeDivs);
