--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -142,7 +142,8 @@
 					<img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" />
 					<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
 					<br>
-					<a href"http://www.gregory-white.co.uk/">Gregory White Modular Synth Performance, June 2017</a>
+					<a href="http://www.gregory-white.co.uk/">Gregory White Modular Synth Performance, June 2017</a>
+					<br>
 					<br>
 
 					<img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" />
