--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -85,7 +85,7 @@
 							<h3 class="border-top">Machine learning porn</h3>
 							<p class="project-desc">Video &amp; AI Code - London 2016</p>
 							<p>
-							A convolutional neural network (shown thousands of images to teach itself to classify) has been trained using Yahoo’s explicit content model for finding pornography in their search engines, which is then back engineered to generate pornography from scratch <a href="http://gabgoh.github.io">(inspiration from Gabriel Goh)</a>.
+							A convolutional neural network (shown thousands of images to teach itself to classify) has been trained using Yahoo’s explicit content model for finding pornography in their search engines, which is then back engineered to generate pornography from scratch <a id="show" href="http://gabgoh.github.io">(inspiration from Gabriel Goh)</a>.
 						</p>
 						</div><!-- // .box-info -->
 
