--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -142,7 +142,7 @@
 					<img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" />
 					<iframe id="vid" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
 					<br>
-					<a id=show href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id=show href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017
+					<a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017
 					<br>
 					<br>
 
