--- a/header.html
+++ b/header.html
@@ -6,18 +6,24 @@
         <h1><a href="index.html" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
       </div><!-- // .desktop-6 -->
 
+      <section id="header2" style="z-index: 0; padding-left: 0px; padding-right: 0px; padding-top: 0px; padding-bottom: 0px;">
+        <div class="container2">
+          <div class="desktop-4 tablet-6 columns">
+            <br>
+          </div>
 
-      				<div class="desktop-6 columns">
-      					<!-- <p class="media-links">
-      										<a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+          <div class="desktop-2 tablet-6 columns">
+            <br>
+          </div>
 
-      										<a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
-
-      										<a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
-
-      										<a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
-      					</p><!-- // .site-desc -->
-      				</div><!-- // .desktop-6 -->
+              <div class="desktop-1 tablet-6 columns">
+                <a href="http://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes" class="btn-social btn-outline"><p>SLADE</p></a>
+              </div>
+              <div class="desktop-1 tablet-6 columns">
+                <a href="http://www.newcontemporaries.org.uk/artists/jake-elwes" class="btn-social btn-outline"><p>BNC</p></a>
+              </div>
+</div>
+</section>
 
       <div class="clear"></div>
     </div><!-- // .container -->
