--- a/lab.html
+++ b/lab.html
@@ -280,6 +280,28 @@
 				</a>
 
 
+				<!-- <a href="project-mappingFacebook.html" class="permalink">
+						<div class="desktop-4 tablet-6 columns">
+							<div class="item">
+								<img src="images/project-mappingFacebook.jpg" alt="" />
+
+								<h3>Visual Material</h3>
+								<span class="category">Image Gallery - since 2009</span>
+							</div>
+						</div>
+					</a>
+
+					<a href="project-photography.html" class="permalink">
+							<div class="desktop-4 tablet-6 columns">
+								<div class="item">
+									<img src="images/project-mappingFacebook.jpg" alt="" />
+
+									<h3>Photography</h3>
+									<span class="category">Image Gallery - since 2009</span>
+								</div>
+							</div>
+						</a> -->
+
 
 				<div class="clear hide-under-tablet"></div>
 
