remove slade/bnc

--- a/header.html
+++ b/header.html
@@ -6,7 +6,7 @@
         <h1><a href="index.html" title="Home"><img src="images/logo_text_half.png" alt="" /></a></h1>
       </div><!-- // .desktop-6 -->
 
-      <section id="header2" style="z-index: 0; padding-left: 0px; padding-right: 0px; padding-top: 0px; padding-bottom: 0px;">
+      <!-- <section id="header2" style="z-index: 0; padding-left: 0px; padding-right: 0px; padding-top: 0px; padding-bottom: 0px;">
         <div class="container2">
           <div class="desktop-4 tablet-6 columns">
             <br>
@@ -23,7 +23,7 @@
                 <a href="http://www.newcontemporaries.org.uk/artists/jake-elwes" class="btn-social btn-outline"><p>BNC</p></a>
               </div>
 </div>
-</section>
+</section> -->
 
       <div class="clear"></div>
     </div><!-- // .container -->
