--- a/about.html
+++ b/about.html
@@ -153,7 +153,7 @@
 							<p>
 								2017 - <a id=show href="http://lumenprize.com/artwork/latent-space"> Lumen Prize Student Prize Shortlist</a> <br>
 								2017 - Slade School of Art Julian Sullivan Prize for outstanding achievement in Media Art <br>
-								2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br>
+								<!-- 2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br> -->
 
 						</p>
 						</div><!-- // .desktop-6 -->
