exhib link update

--- a/about.html
+++ b/about.html
@@ -122,9 +122,9 @@
 							<h4>Exhibitions</h4>
 							<p>
 							2017 - <a id=show href"https://www.aec.at/ai/en/">Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
-							2017 - <a id=show href"https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8">«Art and sustainability vol. 8: digital/real – how art surfs between worlds»</a>, Mobiliar Headquarters, Bern, Switzerland <br>
+							2017 - <a id=show href"https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8">«Digital/real – How art surfs between worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
 							2017 - <a id=show href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
-							2017 - Machine Made: Art, Robotics &amp; A.I., QUAD, Derby <br>
+							2017 - <a id=show href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
 							2017 - <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
 							2017 - <a id=show href="https://events.withgoogle.com/io-extended-2017-campus-london/"> Google I/O Extended 2017 (demo), </a>Google Campus London <br>
 							2017 - <a id=show href="http://acudmachtneu.de/events/789/ask-something/">'Ask Something' - Acud Macht Neu</a>, Transmediale and CTM Vorspiel, Berlin <br>
