exhib link update

--- a/about.html
+++ b/about.html
@@ -121,8 +121,8 @@
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Exhibitions</h4>
 							<p>
-							2017 - <a id=show href"https://www.aec.at/ai/en/">Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
-							2017 - <a id=show href"https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8">«Digital/real – How art surfs between worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
+							2017 - <a id=show href="https://www.aec.at/ai/en/"> Ars Electronica Festival: Artificial Intelligence</a>, POSTCITY Linz, Austria <br>
+							2017 - <a id=show href="https://www.mobiliar.ch/die-mobiliar/engagement/kunst-und-kultur/ausstellungen-und-fuehrungen/kunst-und-nachhaltigkeit-vol-8"> Digital/Real – How Art Surfs Between Worlds</a>, Mobiliar Headquarters, Bern, Switzerland <br>
 							2017 - <a id=show href="http://lcfi.ac.uk/news-events/events/Conference2017/">AI: Myth and Reality</a>, Leverhulme Centre for the Future of Intelligence (CFI), Cambridge <br>
 							2017 - <a id=show href="https://www.derbyquad.co.uk/exhibition/machine-made--art-robots-and-ai.aspxMachine"> Made: Art, Robotics &amp; A.I.</a>, QUAD, Derby <br>
 							2017 - <a id=show href="http://www.newcontemporaries.org.uk/artists/jake-elwes"> Bloomberg New Contemporaries</a>, Newcastle &amp; London <br>
