--- a/about.html
+++ b/about.html
@@ -70,21 +70,78 @@
 	<nav id="navMenu"></nav>
 <script src="header.js"></script>
 
+<section id="header2">
+
+<div class="container">
+
+	<div class="desktop-12 columns"><div class="border-top" style="padding-top: 0px;"></div></div>
+
+	<div class="desktop-2 tablet-6 columns">
+		<!-- icons to try for about fa-eye fa-male fa-plus -->
+		<a href="index.html" class="btn-social btn-outline"><p>WORKS</p></a>
+	</div><!-- // .desktop-3 -->
+
+	<div class="desktop-2 tablet-6 columns">
+		<!-- icons to try for about fa-eye fa-male fa-plus -->
+		<a href="news.html" class="btn-social btn-outline"><p>NEWS</p></a>
+	</div><!-- // .desktop-3 -->
+
+
+	<div class="desktop-4 tablet-6 columns">
+		<!-- icons to try for about fa-eye fa-male fa-plus -->
+		<a href="about.html" class="btn-social btn-outline"><p>ABOUT &amp; SHOWS</p></a>
+
+			<!-- <a href="about.html" class="btn-social btn-outline"><p>ABOUT<i class="fa fa-fw fa-eye" style="padding-left: 10px;font-size: 17px;"></i></p></a> -->
+	</div><!-- // .desktop-3 -->
+
+
+
+
+	<div class="desktop-4 tablet-6 columns">
+
+		<ul id="social">
+			<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a></li>
+			<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter"></i></a></li>
+			<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a></li>
+			<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a></li>
+			<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a></li>
+			<!-- <li><a href="https://lab.jakeelwes.com" class="btn-social btn-outline">STUDIO</i></a></li> -->
+		</ul><!-- // #social -->
+
+		<!-- <a href="https://www.facebook.com/JakeElwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"></i></a>
+		<a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"></i></a>
+		<a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"></i></a>
+		<a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"></i></a>
+		<a href="#" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"></i></a> -->
+
+	</div><!-- // .desktop-9 -->
+	<!-- <div class="desktop-4 columns"><p></p></div> -->
+
+
+
+
+	<div class="clear hide-under-tablet"></div>
+</div><!-- // .container -->
+</section><!-- // section#header -->
+
+
 	<!-- About
 	================================================== -->
 	<section id="about" class="page">
 
 		<div class="container">
 
-			<div class="desktop-12 columns"><div class="border-top"></div></div>
+			<!-- <div class="desktop-12 columns"><div class="border-top"></div></div> -->
 
 			<div class="clear"></div>
 
-			<div class="desktop-3 tablet-12 columns">
-				<h2>About</h2>
-			</div>
-			<div class="desktop-9 tablet-12 columns">
+
+			<div class="desktop-12 tablet-12 columns">
 				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
+				<blockquote>
+					<footer>Jake is currently currently working with <a id=show href="https://www.theartistdevelopmentagency.org">the Artist Development Agency</a>.
+</footer>
+				</blockquote>
 			</div>
 		</div><!-- // .container -->
 
@@ -94,7 +151,7 @@
 
 				<div class="item">
 					<div class="desktop-3 tablet-6 columns">
-						<img src="images/about_services02.png" alt="">
+						<img src="images/about_services04.png" alt="">
 					</div><!-- // .desktop-3 -->
 
 					<div class="desktop-9 tablet-6 columns">
@@ -115,7 +172,8 @@
 
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
-							<img src="images/about_services04.png" alt="">
+							<!-- <img src="images/about_services04.png" alt=""> -->
+							<p></p>
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
@@ -147,12 +205,13 @@
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
 							<p></p>
+
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Prizes</h4>
 							<p>
-								2017 - <a id=show href="http://lumenprize.com/artwork/latent-space"> Lumen Prize Student Prize Shortlist</a> <br>
+								2017 - <a id=show href="http://lumenprize.com/artwork/latent-space"> Lumen Prize Student Prize Nominee</a> <br>
 								2017 - Slade School of Art Julian Sullivan Prize for outstanding achievement in Media Art <br>
 								<!-- 2012 - Awarded Top UK Result in Fine Art (Cambridge International Examinations)<br> -->
 
@@ -166,6 +225,7 @@
 					<div class="item">
 						<div class="desktop-3 tablet-6 columns">
 							<img src="images/about_services03.png" alt="">
+
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
@@ -224,12 +284,11 @@
 							<h4>Follow me</h4>
 							<p>
 							<ul id="social">
-								<li><a href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"style="padding-right: 10px;"></i>Instagram</a></li>
-								<li><a href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter" style="padding-right: 10px;"></i>Twitter</a></li>
-								<li><a href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"style="padding-right: 10px;"></i>Vimeo</a></li>
-								<li><a href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"style="padding-right: 10px;"></i>Linkedin</a></li>
-								<li><a href="https://www.facebook.com/jelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-facebook"style="padding-right: 10px;"></i>Personal Facebook</a></li>
-								<li><a href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"style="padding-right: 10px;"></i>Email me</a></li>
+								<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"style="padding-right: 10px;"></i>Instagram</a></li>
+								<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter" style="padding-right: 10px;"></i>Twitter</a></li>
+								<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"style="padding-right: 10px;"></i>Vimeo</a></li>
+								<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"style="padding-right: 10px;"></i>Linkedin</a></li>
+								<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"style="padding-right: 10px;"></i>Email me</a></li>
 							</ul><!-- // #social -->
 						</p>
 						</div><!-- // .desktop-6 -->
