--- a/project-AutoEncodedBuddha.html
+++ b/project-AutoEncodedBuddha.html
@@ -148,10 +148,10 @@
 
 					<img src="images/project-AutoEncodedBuddha/1.JPG" width="70%" alt="Jake Elwes digital artist" />
 					<img src="images/project-AutoEncodedBuddha/2.JPG" alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/3.JPG" width="70%"alt="Jake Elwes digital artist" />
+					<!-- <img src="images/project-AutoEncodedBuddha/3.JPG" width="70%"alt="Jake Elwes digital artist" />
 					<img src="images/project-AutoEncodedBuddha/4.JPG" width="70%"alt="Jake Elwes digital artist" />
 					<img src="images/project-AutoEncodedBuddha/5.JPG" width="70%"alt="Jake Elwes digital artist" />
-					<img src="images/project-AutoEncodedBuddha/6.JPG" alt="Jake Elwes digital artist" />
+					<img src="images/project-AutoEncodedBuddha/6.JPG" alt="Jake Elwes digital artist" /> -->
 
 			</div><!-- // .desktop-0 -->
 
