--- a/project-closedLoop.html
+++ b/project-closedLoop.html
@@ -131,10 +131,10 @@ Two datasets to train the A.I. models (unsupervised):<br>
 				</script>
 
 				<br></br>
-				<img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" />
+				<!-- <img src="images/project-closedLoop/1_granary_jake_elwes__043.jpg" alt="Jake Elwes digital artist" /> -->
 				<img src="images/project-closedLoop/IMG_0853.jpg" alt="Jake Elwes digital artist" />
 				<img src="images/project-closedLoop/IMG_0852.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" />
+				<!-- <img src="images/project-closedLoop/IMG_0702.jpg" alt="Jake Elwes digital artist" /> -->
 
 
 			</div><!-- // .desktop-9 -->
