--- a/project-digitalTouch.html
+++ b/project-digitalTouch.html
@@ -111,8 +111,14 @@
 <div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
+				<img src="images/project-digitalTouch/Phone.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalTouch/Camera.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalTouch/Tinder.jpg" style="width:28%; padding:1%"alt="Jake Elwes digital artist" />
+				<br><br>
+
 				<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
-				<embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%" height="150px" type='application/pdf'>
+				<embed id="pdf" src="images/project-digitalTouch/Book.pdf" width="100%" height="400px" type='application/pdf'>
+
 
 					<script>
 						function resizeDivs() {
@@ -124,12 +130,11 @@
 
 					<!-- <iframe id="pdf" src="https://cdn.flipsnack.com/widget/flipsnackwidget.html?hash=fdh52mpze&bgcolor=EEEEEE&t=1483891832" width="100%" height="100%" seamless="seamless" scrolling="no" frameBorder="0" allowTransparency="true" allowFullScreen="true"></iframe> -->
 
-				<img src="images/project-digitalTouch/Phone.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-digitalTouch/Camera.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-digitalTouch/Line Weaver.jpg" alt="Jake Elwes digital artist" />
+
+
+				<!-- <img src="images/project-digitalTouch/Line Weaver.jpg" alt="Jake Elwes digital artist" />
 				<img src="images/project-digitalTouch/Hypnoglyph.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-digitalTouch/Tinder.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-digitalTouch/all1-1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalTouch/all1-1.jpg" alt="Jake Elwes digital artist" /> -->
 
 			</div><!-- // .desktop-9 -->
 
