--- a/project-digitalWhisper.html
+++ b/project-digitalWhisper.html
@@ -114,13 +114,13 @@ Tweets in a 2 mile radius of the pieces’ installation are whispered by the com
 				Your user agent does not support the HTML5 Audio element.
 			</audio><br><br>
 
-				<audio controls style="width: 100%;"
+				<!-- <audio controls style="width: 100%;"
 					src="images/project-digitalWhisper/sound/digitalWhisper3.mp3">
 				Your user agent does not support the HTML5 Audio element.
 				</audio><br><br>
 
 				<img src="images/project-digitalWhisper/Digital Whispers3.jpg" width="47%" alt="Jake Elwes digital artist" />
-				<img src="images/project-digitalWhisper/Digital Whispers.jpg" width="47%" alt="Jake Elwes digital artist" />
+				<img src="images/project-digitalWhisper/Digital Whispers.jpg" width="47%" alt="Jake Elwes digital artist" /> -->
 
 
 
