--- a/project-MLPorn.html
+++ b/project-MLPorn.html
@@ -75,11 +75,11 @@
 	<section id="works" class="page single">
 		<div class="container">
 
-			<div class="desktop-3 push-9 tablet-12 tablet-push-0 nested columns">
+			<div class="desktop-3 push-6 tablet-12 tablet-push-0 nested columns">
 
 				<div class="sidebar sticky">
 
-					<div class="desktop-3 tablet-12 columns">
+					<div class="desktop-6 tablet-12 columns">
 
 						<div class="box-info">
 							<h3 class="border-top">Machine learning porn</h3>
@@ -99,11 +99,11 @@
 			</div><!-- // .desktop-3 .nested -->
 
 			<div class="clear show-under-tablet"></div>
-<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
+<div class="desktop-6 pull-3 tablet-12 tablet-pull-0 columns">
 
 				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 
-				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0" width="60%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+				<iframe id="vid2" src="https://player.vimeo.com/video/213923669?title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 				<br></br>
 
 				<script>
@@ -114,10 +114,10 @@
 					$(resizeDivs);
 					$(window).resize(resizeDivs);
 				</script>
-				<img src="images/project-MLPorn/3.jpg" alt="Jake Elwes digital artist" />
+				<!-- <img src="images/project-MLPorn/3.jpg" alt="Jake Elwes digital artist" />
 
 				<img src="images/project-MLPorn/2.jpg" alt="Jake Elwes digital artist" />
-				<img src="images/project-MLPorn/1.jpg" alt="Jake Elwes digital artist" />
+				<img src="images/project-MLPorn/1.jpg" alt="Jake Elwes digital artist" /> -->
 
 			</div><!-- // .desktop-9 -->
 
