--- a/project-latentSpace.html
+++ b/project-latentSpace.html
@@ -118,31 +118,31 @@
 				$(resizeDivs);
 				$(window).resize(resizeDivs);
 			</script>
-			<iframe id="vid" src="https://player.vimeo.com/video/219526743?color=ffffff&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
+			<iframe id="vid" src="https://player.vimeo.com/video/219526743?autoplay=1&loop=1&title=0&byline=0&portrait=0" width="100%" height="360" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
 			<br>
 
-					<video controls autoplay loop  style="width: 100%;">
+					<!-- <video controls autoplay loop  style="width: 100%;">
 					  <source src="images/project-latentSpace/latentSpace.mp4" type="video/mp4">
 					  Your browser does not support the video tag.
-					</video>
+					</video> -->
 
 
 
 					<br>
 
-					<img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" />
-					<img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" />
-					<img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" />
+					<!-- <img src="images/project-latentSpace/tsne1.jpg" alt="Jake Elwes digital artist" /> -->
+					<!-- <img src="images/project-latentSpace/tsne2.jpg" alt="Jake Elwes digital artist" /> -->
+					<!-- <img src="images/project-latentSpace/tsne3.jpg" alt="Jake Elwes digital artist" /> -->
 					<img src="images/project-latentSpace/Latent Install.jpg" alt="Jake Elwes digital artist" />
-					<img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" />
+					<!-- <img src="images/project-latentSpace/Latent Install2.jpg" alt="Jake Elwes digital artist" /> -->
 					<iframe id="vid2" width="100%" height="360" src="https://www.youtube.com/embed/uIBBIKRAwl4" frameborder="0" allowfullscreen></iframe>
 					<br>
 					<a id="show" href="www.gregory-white.co.uk">Gregory White</a> Modular Synth Performance - <a id="show" href="gregwht.bandcamp.com">Bandcamp,</a> Slade (UCL) May 2017
 					<br>
 					<br>
 
-					<img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" />
-					<img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" />
+					<!-- <img src="images/project-latentSpace/Latent Space.jpg" alt="Jake Elwes digital artist" /> -->
+					<!-- <img src="images/project-latentSpace/latent2.jpg" alt="Jake Elwes digital artist" /> -->
 
 					<!-- computer hardware (self-image)
 					<video controls autoplay loop  style="width: 100%;">
