--- a/project-lineForWalk.html
+++ b/project-lineForWalk.html
@@ -105,8 +105,8 @@
 			<div class="desktop-9 pull-3 tablet-12 tablet-pull-0 columns">
 
 
-				
-				<img src="images/project-lineForWalk/Bloomsbury.jpeg" alt="Jake Elwes digital artist" />
+
+				<img src="images/project-lineForWalk/Bloomsbury.jpg" alt="Jake Elwes digital artist" />
 				<img src="images/project-lineForWalk/Chicago.jpg" alt="Jake Elwes digital artist" />
 				<img src="images/project-lineForWalk/Heath.jpg" alt="Jake Elwes digital artist" />
 
