--- a/about.html
+++ b/about.html
@@ -229,8 +229,11 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
-							<h4>Talks</h4>
-							<p></p>
+							<h4>Talks / Workshops</h4>
+							<p>2017 - Ars Electronica, 2017<br>
+								2017 - London Creative Coding<br>
+								2016 - Slade School of Fine Art, UCL<br><br>
+									</p>
 							<iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe>
 
 											<!-- <img src="images/project-digitalTouch/Book.pdf" alt="Jake Elwes digital artist" /> -->
