--- a/about.html
+++ b/about.html
@@ -161,7 +161,7 @@
 
 						Education: <br>
 
-						<b>Slade School of Art (UCL)</b>, <a id=show href="http://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">BA - Fine Art Media, 2013-17 </a><br>
+						<b>Slade School of Art (UCL)</b>, <a id=show href="http://www.ucl.ac.uk/slade/shows/2017/ba_bfa/elwes">BA (Hons) - Fine Art Media, 2013-17 </a><br>
 						<b>SAIC (School of the Art Institute Chicago)</b>, International Exchange - Art &amp; Technology, 2015 <br>
 						<b>Central St Martins (UAL)</b>, Foundation 2012-13 <br>
 					</p>
