--- a/about.html
+++ b/about.html
@@ -139,7 +139,7 @@
 			<div class="desktop-12 tablet-12 columns">
 				<p class="page-desc">Jake Elwes explores both Fine Art and Digital Code, often embracing the overlap between the two. Recent projects look at how we interact with technology and Artificial Intelligence. </p>
 				<blockquote>
-					<footer>Jake is currently currently working with <a id=show href="https://www.theartistdevelopmentagency.org">the Artist Development Agency</a>.
+					<footer>Jake is currently currently working with <a id=show href="https://www.theartistsdevelopmentagency.org">the Artist Development Agency</a>.
 </footer>
 				</blockquote>
 			</div>
@@ -157,7 +157,7 @@
 					<div class="desktop-9 tablet-6 columns">
 						<h4>Background</h4>
 						<p>
-						Born 1993.  <br> <br>
+						Born 1993, London UK.  <br> <br>
 
 						Education: <br>
 
@@ -230,9 +230,9 @@
 
 						<div class="desktop-9 tablet-6 columns">
 							<h4>Talks / Workshops</h4>
-							<p>2017 - Ars Electronica, 2017<br>
-								2017 - London Creative Coding<br>
-								2016 - Slade School of Fine Art, UCL<br><br>
+							<p>2017 - Ars Electronica, Austria<br>
+								2017 - London Creative Coding, UK<br>
+								2016 - University College London, UK<br><br>
 									</p>
 							<iframe id="vid" width="100%" height="100%" src="https://www.youtube.com/embed/acjDB1kodms" frameborder="0" allowfullscreen></iframe>
 
@@ -284,14 +284,14 @@
 						</div><!-- // .desktop-3 -->
 
 						<div class="desktop-9 tablet-6 columns">
-							<h4>Follow me</h4>
+							<h4>Follow</h4>
 							<p>
 							<ul id="social">
 								<li><a target="_blank" href="https://www.instagram.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-instagram"style="padding-right: 10px;"></i>Instagram</a></li>
 								<li><a target="_blank" href="https://www.twitter.com/jakeelwes/" class="btn-social btn-outline"><i class="fa fa-fw fa-twitter" style="padding-right: 10px;"></i>Twitter</a></li>
 								<li><a target="_blank" href="https://vimeo.com/jakeelwes" class="btn-social btn-outline"><i class="fa fa-fw fa-vimeo"style="padding-right: 10px;"></i>Vimeo</a></li>
 								<li><a target="_blank" href="https://www.linkedin.com/in/jake-elwes-40692a6b" class="btn-social btn-outline"><i class="fa fa-fw fa-linkedin"style="padding-right: 10px;"></i>Linkedin</a></li>
-								<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"style="padding-right: 10px;"></i>Email me</a></li>
+								<li><a target="_blank" href="mailto:contaxct@jakxeelwesx.coxm?Subject=Contact" onmouseover="this.href=this.href.replace(/x/g,'');" target="_top" class="btn-social btn-outline"><i class="fa fa-fw fa-envelope-o"style="padding-right: 10px;"></i>Email</a></li>
 							</ul><!-- // #social -->
 						</p>
 						</div><!-- // .desktop-6 -->
